Fix button spacing on tablets.

--- a/assets/sass/components/ads/_googlesitekit-ads-woocommerce-redirect-modal.scss
+++ b/assets/sass/components/ads/_googlesitekit-ads-woocommerce-redirect-modal.scss
@@ -54,11 +54,17 @@
 			}
 
 			button {
-				@media (max-width: $bp-tablet) {
-					width: 100%;
+				width: 100%;
+
+				&:last-child {
+					margin-top: 5px;
+				}
+
+				@media (min-width: $bp-desktop) {
+					width: unset;
 
 					&:last-child {
-						margin-top: 5px;
+						margin-top: unset;
 					}
 				}
 			}
